--- a/app/src/main/res/layout/item_listped.xml
+++ b/app/src/main/res/layout/item_listped.xml
@@ -49,10 +49,34 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="32dp"
                 android:layout_marginTop="16dp"
+                android:layout_marginEnd="9dp"
                 android:layout_marginBottom="16dp"
                 android:text="TextView"
                 app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toStartOf="@+id/button"
                 app:layout_constraintStart_toEndOf="@+id/tvdocumento"
+                app:layout_constraintTop_toBottomOf="@+id/tvrazonsocial" />
+
+            <Button
+                android:id="@+id/button"
+                android:layout_width="32dp"
+                android:layout_height="35dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginEnd="16dp"
+                app:icon="@drawable/baseline_edit_18"
+                app:iconGravity="textTop"
+                app:layout_constraintEnd_toStartOf="@+id/button2"
+                app:layout_constraintTop_toBottomOf="@+id/tvrazonsocial" />
+
+            <Button
+                android:id="@+id/button2"
+                android:layout_width="32dp"
+                android:layout_height="35dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginEnd="32dp"
+                app:icon="@drawable/baseline_delete_18"
+                app:iconGravity="textTop"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/tvrazonsocial" />
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
