--- a/app/src/main/res/layout/item_listped.xml
+++ b/app/src/main/res/layout/item_listped.xml
@@ -53,23 +53,23 @@
                 android:layout_marginBottom="16dp"
                 android:text="TextView"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toStartOf="@+id/button"
+                app:layout_constraintEnd_toStartOf="@+id/btnedit"
                 app:layout_constraintStart_toEndOf="@+id/tvdocumento"
                 app:layout_constraintTop_toBottomOf="@+id/tvrazonsocial" />
 
             <Button
-                android:id="@+id/button"
+                android:id="@+id/btnedit"
                 android:layout_width="32dp"
                 android:layout_height="35dp"
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="16dp"
                 app:icon="@drawable/baseline_edit_18"
                 app:iconGravity="textTop"
-                app:layout_constraintEnd_toStartOf="@+id/button2"
+                app:layout_constraintEnd_toStartOf="@+id/btndelete"
                 app:layout_constraintTop_toBottomOf="@+id/tvrazonsocial" />
 
             <Button
-                android:id="@+id/button2"
+                android:id="@+id/btndelete"
                 android:layout_width="32dp"
                 android:layout_height="35dp"
                 android:layout_marginTop="8dp"
