--- a/app/src/main/res/layout/fragment_creaped.xml
+++ b/app/src/main/res/layout/fragment_creaped.xml
@@ -33,7 +33,7 @@
         app:layout_constraintStart_toStartOf="@+id/guideline"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <EditText
+    <AutoCompleteTextView
         android:id="@+id/ptrazonsocial"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
