--- a/app/src/main/res/layout/fragment_creaped.xml
+++ b/app/src/main/res/layout/fragment_creaped.xml
@@ -1,24 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".view.fragments.CreapedFragment">
+<androidx.constraintlayout.widget.ConstraintLayout
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        app:layout_constraintGuide_begin="50dp" />
+        app:layout_constraintGuide_begin="40dp" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        app:layout_constraintGuide_end="50dp" />
+        app:layout_constraintGuide_end="40dp" />
 
     <EditText
         android:id="@+id/ptdocumento"
@@ -30,7 +33,7 @@
         android:inputType="text"
         android:textSize="14sp"
         app:layout_constraintEnd_toStartOf="@+id/guideline2"
-        app:layout_constraintStart_toStartOf="@+id/guideline"
+        app:layout_constraintStart_toEndOf="@+id/ptidped"
         app:layout_constraintTop_toTopOf="parent" />
 
     <AutoCompleteTextView
@@ -43,8 +46,47 @@
         android:inputType="text"
         android:textSize="14sp"
         app:layout_constraintEnd_toStartOf="@+id/guideline2"
-        app:layout_constraintStart_toStartOf="@+id/guideline"
+        app:layout_constraintStart_toEndOf="@+id/ptidcli"
         app:layout_constraintTop_toBottomOf="@+id/ptdocumento" />
+
+    <EditText
+        android:id="@+id/ptidcli"
+        android:layout_width="50dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:ems="10"
+        android:hint="@string/ptidped"
+        android:inputType="text"
+        android:textAlignment="center"
+        android:textSize="14sp"
+        app:layout_constraintStart_toStartOf="@+id/guideline"
+        app:layout_constraintTop_toBottomOf="@+id/ptidped" />
+
+    <EditText
+        android:id="@+id/ptidusu"
+        android:layout_width="50dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:ems="10"
+        android:hint="@string/ptidped"
+        android:inputType="text"
+        android:textAlignment="center"
+        android:textSize="14sp"
+        app:layout_constraintStart_toStartOf="@+id/guideline"
+        app:layout_constraintTop_toBottomOf="@+id/ptfchareparto" />
+
+    <EditText
+        android:id="@+id/ptidproduc"
+        android:layout_width="50dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:ems="10"
+        android:hint="@string/ptidped"
+        android:inputType="text"
+        android:textAlignment="center"
+        android:textSize="14sp"
+        app:layout_constraintStart_toStartOf="@+id/guideline"
+        app:layout_constraintTop_toBottomOf="@+id/textView3" />
 
     <EditText
         android:id="@+id/ptrucdni"
@@ -73,7 +115,7 @@
         app:layout_constraintTop_toBottomOf="@+id/ptrucdni" />
 
     <EditText
-        android:id="@+id/ptreparto"
+        android:id="@+id/ptfchareparto"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
@@ -95,8 +137,8 @@
         android:inputType="text"
         android:textSize="14sp"
         app:layout_constraintEnd_toStartOf="@+id/guideline2"
-        app:layout_constraintStart_toStartOf="@+id/guideline"
-        app:layout_constraintTop_toBottomOf="@+id/ptreparto" />
+        app:layout_constraintStart_toEndOf="@+id/ptidusu"
+        app:layout_constraintTop_toBottomOf="@+id/ptfchareparto" />
 
     <AutoCompleteTextView
         android:id="@+id/ptdescripcionproducto"
@@ -108,8 +150,7 @@
         android:inputType="text"
         android:textSize="14sp"
         app:layout_constraintEnd_toStartOf="@+id/guideline2"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/guideline"
+        app:layout_constraintStart_toEndOf="@+id/ptidproduc"
         app:layout_constraintTop_toBottomOf="@+id/textView3" />
 
     <EditText
@@ -158,7 +199,7 @@
         android:id="@+id/textView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
+        android:layout_marginStart="8dp"
         android:layout_marginTop="16dp"
         android:text="@string/tvdetallepedido"
         android:textSize="16sp"
@@ -178,80 +219,142 @@
         app:layout_constraintTop_toBottomOf="@+id/ptprecioproducto" />
 
     <Button
-        android:id="@+id/btnregistrar"
+        android:id="@+id/btnactualizarlistado"
         android:layout_width="wrap_content"
         android:layout_height="40dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="8dp"
+        android:text="@string/btnactualizarlistado"
+        android:textSize="8sp"
+        app:layout_constraintStart_toStartOf="@+id/guideline"
+        app:layout_constraintTop_toBottomOf="@+id/ptprecioproducto" />
+
+    <Button
+        android:id="@+id/btnguardar"
+        android:layout_width="wrap_content"
+        android:layout_height="40dp"
+        android:layout_marginTop="8dp"
         android:layout_marginEnd="24dp"
+        android:layout_marginBottom="8dp"
         android:text="@string/textbtnregistrar"
         android:textSize="8sp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/guideline2" />
+        app:layout_constraintEnd_toStartOf="@+id/guideline2"
+        app:layout_constraintTop_toBottomOf="@+id/rvdetallepedido" />
 
     <Button
         android:id="@+id/btncancelar"
         android:layout_width="80dp"
         android:layout_height="40dp"
+        android:layout_marginTop="8dp"
         android:layout_marginEnd="16dp"
+        android:layout_marginBottom="8dp"
         android:text="@string/textbtncancelar"
         android:textSize="8sp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/btnregistrar" />
+        app:layout_constraintEnd_toStartOf="@+id/btnguardar"
+        app:layout_constraintTop_toBottomOf="@+id/rvdetallepedido" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvdetallepedido"
         android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:layout_marginBottom="8dp"
-        app:layout_constraintBottom_toTopOf="@+id/btncancelar"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.482"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvimportes" />
+        app:layout_constraintTop_toBottomOf="@+id/tvunidades" />
 
     <TextView
-        android:id="@+id/tvdescripciones"
-        android:layout_width="0dp"
+        android:id="@+id/tvtotal"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/tvdescripcion"
-        app:layout_constraintEnd_toStartOf="@+id/tvunidades"
+        android:layout_marginTop="18dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="18dp"
+        android:text="TextView"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/btncancelar"
+        app:layout_constraintTop_toBottomOf="@+id/rvdetallepedido" />
+
+    <EditText
+        android:id="@+id/ptidped"
+        android:layout_width="50dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:ems="10"
+        android:hint="@string/ptidped"
+        android:inputType="text"
+        android:textAlignment="center"
+        android:textSize="14sp"
+        app:layout_constraintStart_toStartOf="@+id/guideline"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/tvidsdetalles"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:text="@string/textids"
+        app:layout_constraintEnd_toStartOf="@+id/tvdescripciones"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btnagregardetalle" />
 
     <TextView
-        android:id="@+id/tvunidades"
-        android:layout_width="0dp"
+        android:id="@+id/tvdescripciones"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:text="@string/tvdescripcion"
+        app:layout_constraintEnd_toStartOf="@+id/tvunidades"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/tvidsdetalles"
+        app:layout_constraintTop_toBottomOf="@+id/btnagregardetalle" />
+
+    <TextView
+        android:id="@+id/tvunidades"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
         android:text="@string/tviunidad"
         app:layout_constraintEnd_toStartOf="@+id/tvcantidades"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/tvdescripciones"
         app:layout_constraintTop_toBottomOf="@+id/btnagregardetalle" />
 
     <TextView
         android:id="@+id/tvcantidades"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
         android:text="@string/tvcantidad"
         app:layout_constraintEnd_toStartOf="@+id/tvimportes"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/tvunidades"
         app:layout_constraintTop_toBottomOf="@+id/btnagregardetalle" />
 
     <TextView
         android:id="@+id/tvimportes"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
         android:text="@string/tvimporter"
         app:layout_constraintEnd_toStartOf="@+id/tvacciones"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/tvcantidades"
         app:layout_constraintTop_toBottomOf="@+id/btnagregardetalle" />
 
     <TextView
         android:id="@+id/tvacciones"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
         android:text="@string/tvacciones"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/tvimportes"
         app:layout_constraintTop_toBottomOf="@+id/btnagregardetalle" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
+    </ScrollView>
