Implemetanción de la vista de edición y sus funcionalidades

--- a/app/src/main/res/layout/fragment_creaped.xml
+++ b/app/src/main/res/layout/fragment_creaped.xml
@@ -127,7 +127,7 @@
         app:layout_constraintStart_toStartOf="@+id/guideline"
         app:layout_constraintTop_toBottomOf="@+id/ptdireccion" />
 
-    <EditText
+    <AutoCompleteTextView
         android:id="@+id/ptvendedor"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
